--- a/docs/stories/4.1.comprehensive-integration-testing.story.md
+++ b/docs/stories/4.1.comprehensive-integration-testing.story.md
@@ -19,8 +19,8 @@ Draft
 8. Test coverage report showing >80% coverage on business logic
 
 ## Tasks / Subtasks
-- [ ] Set up integration test infrastructure (AC: 3, 4)
-  - [ ] Add TestContainers dependency to backend/pom.xml:
+- [x] Set up integration test infrastructure (AC: 3, 4)
+  - [x] Add TestContainers dependency to backend/pom.xml:
     ```xml
     <dependency>
       <groupId>org.testcontainers</groupId>
@@ -38,18 +38,18 @@ Draft
       <scope>test</scope>
     </dependency>
     ```
-  - [ ] Create base test class: backend/src/test/java/com/invoiceme/IntegrationTestBase.java
-  - [ ] Configure @SpringBootTest with random port
-  - [ ] Configure @Testcontainers with PostgreSQL container
-  - [ ] Set up TestRestTemplate or WebTestClient for API calls
-  - [ ] Create test database initialization scripts
-  - [ ] Configure test application.yml with TestContainers properties
-  - [ ] Add @BeforeEach method to reset database state
-  - [ ] Add helper methods for JWT token generation in tests
-  - [ ] Configure test logging to show SQL statements (for debugging)
+  - [x] Create base test class: backend/src/test/java/com/invoiceme/IntegrationTestBase.java
+  - [x] Configure @SpringBootTest with random port
+  - [x] Configure @Testcontainers with PostgreSQL container
+  - [x] Set up TestRestTemplate or WebTestClient for API calls
+  - [x] Create test database initialization scripts
+  - [x] Configure test application.yml with TestContainers properties
+  - [x] Add @BeforeEach method to reset database state
+  - [x] Add helper methods for JWT token generation in tests
+  - [x] Configure test logging to show SQL statements (for debugging)
 
-- [ ] Create test data builders (AC: 2)
-  - [ ] Create CustomerTestBuilder.java in backend/src/test/java/com/invoiceme/builders/
+- [x] Create test data builders (AC: 2)
+  - [x] Create CustomerTestBuilder.java in backend/src/test/java/com/invoiceme/builders/
     ```java
     public class CustomerTestBuilder {
       private String name = "Test Customer";
@@ -63,21 +63,21 @@ Draft
       public CreateCustomerDTO buildDTO() { ... }
     }
     ```
-  - [ ] Create InvoiceTestBuilder.java:
+  - [x] Create InvoiceTestBuilder.java:
     - Builder for Invoice entity
     - Builder for CreateInvoiceDTO
     - Methods: withCustomer, withLineItem, withStatus, withDates
     - Default: Draft status, 1 line item, dates set to today
-  - [ ] Create LineItemTestBuilder.java:
+  - [x] Create LineItemTestBuilder.java:
     - Builder for LineItem objects
     - Methods: withDescription, withQuantity, withUnitPrice, withDiscount, withTax
     - Default: quantity=1, unitPrice=100, no discount, no tax
-  - [ ] Create PaymentTestBuilder.java:
+  - [x] Create PaymentTestBuilder.java:
     - Builder for Payment entity
     - Builder for RecordPaymentDTO
     - Methods: withInvoice, withAmount, withMethod, withDate
     - Default: amount=100, method=CreditCard, date=today
-  - [ ] Add utility methods to builders:
+  - [x] Add utility methods to builders:
     - buildAndSave(repository) - builds and persists to DB
     - buildList(int count) - creates multiple instances
     - withDefaults() - reset to default values
@@ -278,8 +278,8 @@ Draft
     - Error messages user-friendly
     - Field-level errors for validation
 
-- [ ] Add test coverage reporting (AC: 8)
-  - [ ] Add JaCoCo plugin to backend/pom.xml:
+- [x] Add test coverage reporting (AC: 8)
+  - [x] Add JaCoCo plugin to backend/pom.xml:
     ```xml
     <plugin>
       <groupId>org.jacoco</groupId>
@@ -321,7 +321,7 @@ Draft
       </executions>
     </plugin>
     ```
-  - [ ] Configure coverage exclusions:
+  - [x] Configure coverage exclusions:
     - Exclude DTOs (data classes only)
     - Exclude configuration classes
     - Exclude main application class
@@ -335,8 +335,8 @@ Draft
     - Service classes
   - [ ] Add coverage badge to README (optional)
 
-- [ ] Create test utilities and helpers (AC: 1-8)
-  - [ ] Create JwtTestHelper.java:
+- [x] Create test utilities and helpers (AC: 1-8)
+  - [x] Create JwtTestHelper.java:
     - generateToken(username) - creates valid JWT for tests
     - getAuthHeader(username) - returns Bearer token header
     - extractUsername(token) - parses JWT token
@@ -347,10 +347,10 @@ Draft
     - deleteRequest(url, headers) - generic DELETE
     - assertSuccessResponse(response) - common assertions
   - [ ] Create DatabaseTestHelper.java:
-    - clearAllTables() - reset database state
-    - createTestCustomer() - quick customer creation
-    - createTestInvoice() - quick invoice creation
-    - createTestPayment() - quick payment creation
+    - clearAllTables() - reset database state (DONE in IntegrationTestBase)
+    - createTestCustomer() - quick customer creation (DONE via builders)
+    - createTestInvoice() - quick invoice creation (DONE via builders)
+    - createTestPayment() - quick payment creation (DONE via builders)
     - assertDatabaseState() - verify expected DB state
   - [ ] Create AssertionHelper.java:
     - assertCustomerEquals(expected, actual)
@@ -875,20 +875,38 @@ public class CustomerInvoicePaymentFlowTest extends IntegrationTestBase {
 | Date | Version | Description | Author |
 |------|---------|-------------|---------|
 | 2025-11-08 | v1.0 | Initial story creation from PRD Epic 4 Story 4.1 | Claude (Story Agent) |
+| 2025-11-09 | v1.1 | Set up integration test infrastructure, test builders, JaCoCo plugin | James (Dev Agent) |
 
 ## Dev Agent Record
 
 ### Agent Model Used
-Not yet implemented
+claude-sonnet-4-5-20250929
 
 ### Debug Log References
-None yet - will be populated during implementation
+None - Initial implementation phase completed successfully
 
 ### Completion Notes List
-None yet - will be populated during implementation
+- Successfully set up TestContainers infrastructure with PostgreSQL 15
+- Created IntegrationTestBase with proper configuration for all integration tests
+- Implemented all test data builders (Customer, Invoice, LineItem, Payment) with full builder pattern support
+- Added JaCoCo plugin for code coverage tracking with 80% threshold
+- JwtTestHelper created for authentication in integration tests
+- All infrastructure code compiles successfully with mvn clean compile test-compile
+- Ready to implement actual integration test classes
 
 ### File List
-None yet - will be populated during implementation
+
+**New Files Created:**
+- `/Users/mike/gauntlet/invoice-me/backend/src/test/java/com/invoiceme/IntegrationTestBase.java` - Base class for all integration tests
+- `/Users/mike/gauntlet/invoice-me/backend/src/test/resources/application-integration-test.properties` - Integration test configuration
+- `/Users/mike/gauntlet/invoice-me/backend/src/test/java/com/invoiceme/helpers/JwtTestHelper.java` - JWT token helper for tests
+- `/Users/mike/gauntlet/invoice-me/backend/src/test/java/com/invoiceme/builders/CustomerTestBuilder.java` - Customer test data builder
+- `/Users/mike/gauntlet/invoice-me/backend/src/test/java/com/invoiceme/builders/InvoiceTestBuilder.java` - Invoice test data builder
+- `/Users/mike/gauntlet/invoice-me/backend/src/test/java/com/invoiceme/builders/LineItemTestBuilder.java` - LineItem test data builder
+- `/Users/mike/gauntlet/invoice-me/backend/src/test/java/com/invoiceme/builders/PaymentTestBuilder.java` - Payment test data builder
+
+**Modified Files:**
+- `/Users/mike/gauntlet/invoice-me/backend/pom.xml` - Added testcontainers junit-jupiter dependency and JaCoCo plugin configuration
 
 ## QA Results
 Not yet reviewed
